tests/api_misuse/register_impl_for_never.stderr
error: custom attribute panicked
 --> tests/api_misuse/register_impl_for_never.rs:7:1
  |
7 | #[traitreg::register]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Cannot register implementation on a never type, expected a struct, enum, union or type alias.
